# modular-cli-sdk

./: CHANGELOG.md  CODEOWNERS  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: build-and-check-python-package.yml  pypi-package.yml
.github/workflows/.github/workflows/: pypi-package.yml
modular_cli_sdk/client/: ssm_client.py
modular_cli_sdk/commons/: constants.py  exception.py  logger.py
modular_cli_sdk/services/: credentials_manager.py
modular_cli_sdk/utils/: view_utils.py
scripts/vault_migration/: README.md  examples.md  vault_patch.py  vault_test_data.py
tests/: conftest.py  test_abstract_implementation.py  test_constants.py  test_credentials_manager.py  test_edge_cases_extra.py  test_logger.py  test_python314_compat.py  test_ssm_client.py  test_view_utils.py
