[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "modular-cli-sdk"
version = "3.1.4"
authors = [
    {name = "EPAM Systems", email = "support@syndicate.team"}
]
license = {file = "LICENSE"}
description = "Core component for CLI tools built atop of Modular Framework"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "boto3>=1.36.11,<2",
    "botocore>=1.36.11,<2",
    "click>=8.0.0,<9.0.0"
]

[project.urls]
Homepage = "https://github.com/epam/modular-cli-sdk"
Documentation = "https://github.com/epam/modular-cli-sdk/blob/main/README.md"
Changelog = "https://github.com/epam/modular-cli-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
hvac = ["hvac~=2.1.0"]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "moto[ssm]>=4.0.0,<6.0.0",
]
all = [
    "modular-cli-sdk[hvac,dev]"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]


# =============================================================================
# Pytest Configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]


# =============================================================================
# Coverage Configuration
# =============================================================================
[tool.coverage.run]
source = ["modular_cli_sdk"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
fail_under = 70
show_missing = true
skip_covered = false


# =============================================================================
# Ruff (Linter & Formatter)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["modular_cli_sdk"]


# =============================================================================
# Mypy (Type Checking)
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "build/",
]
