[metadata]
name = modular-cli_sdk
version = 1.1.4
requires_python = >=3.8
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
license : Apache-2.0
description = Core component for CLI tools built atop of Modular Framework
author=EPAM Systems
author_email=support@syndicate.team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/epam/modular-cli-sdk

[options]
packages = find:
include_package_data = True
install_requires =
    boto3==1.26.80
    botocore==1.29.80

[options.extras_require]
hvac =
    hvac==1.2.1